[SVG -> OTF Converter] Parsing failures cause use of incomplete fonts https://bugs.webkit.org/show_bug.cgi?id=152772 <rdar://problem/24043104>

Reviewed by Simon Fraser.

Source/WebCore:

Originally, if we fail to parse a glyph, we would simply skip the glyph. However, this means that
we will create an incomplete font without all the necessary glyphs. This causes very distressing
text where all the occurances of a particular letter are missing. Instead, we should treat the
entire font as invalid.

Test: fast/text/svg-font-invalid-glyph-path-failure.html

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::font):
* loader/cache/CachedSVGFont.cpp:
(WebCore::CachedSVGFont::ensureCustomFontData):
* svg/SVGToOTFFontConversion.cpp:
(WebCore::SVGToOTFFontConverter::error):
(WebCore::SVGToOTFFontConverter::transcodeGlyphPaths):
(WebCore::SVGToOTFFontConverter::processGlyphElement):
(WebCore::convertSVGToOTFFont):
* svg/SVGToOTFFontConversion.h:

LayoutTests:

Make sure the font renders as if its invalid.

* fast/text/resources/bustedfont.svg: Added.
* fast/text/svg-font-invalid-glyph-path-failure-expected.html: Added.
* fast/text/svg-font-invalid-glyph-path-failure.html: Added.

Canonical link: https://commits.webkit.org/171048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194839 268f45cc-cd09-0410-ab3c-d52691b4dbfc